[package]
name = "mbqueue"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Fast queue.Queue replacement implemented in Rust"

[lib]
name = "mbqueue"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
parking_lot = "0.12"

[build-dependencies]
pyo3-build-config = "0.27"
