[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mbqueue"
version = "0.1.0"
requires-python = ">=3.9"
license = "MIT"
keywords = ["queue", "threading", "performance", "free-threaded"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-benchmark>=5.2.3",
    "ruff>=0.14.14",
]
