[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mbqueue"
version = "0.1.0"
description = "Fast queue.Queue replacement implemented in Rust"
requires-python = ">=3.9"
license = "MIT"
readme = "README.md"
authors = [{ name = "Andrew E. Falcon", email = "aefalcon@gmail.com" }]
keywords = ["queue", "threading", "performance", "free-threaded"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Source = "https://github.com/aefalcon/mbqueue"

[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-benchmark>=5.2.3",
    "ruff>=0.14.14",
]
